--- a/ScavengerHunt/ScavengerHunt/Base.lproj/Main.storyboard
+++ b/ScavengerHunt/ScavengerHunt/Base.lproj/Main.storyboard
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Task List View Controller-->
+        <!--Scavenger Hunt Check List-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="TaskListViewController" customModule="ScavengerHunt" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Scavenger Hunt Check List" id="BYZ-38-t0r" customClass="TaskListViewController" customModule="ScavengerHunt" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -20,38 +20,38 @@
                                 <rect key="frame" x="0.0" y="103" width="393" height="715"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Task Cell" rowHeight="51" id="2Zg-Xa-BhV" customClass="TaskCell" customModule="ScavengerHunt" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TaskCell" rowHeight="51" id="2Zg-Xa-BhV" customClass="TaskCell" customModule="ScavengerHunt" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="393" height="51"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2Zg-Xa-BhV" id="FHy-D0-c6j">
                                             <rect key="frame" x="0.0" y="0.0" width="393" height="51"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Task Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mgg-sE-4K0">
-                                                    <rect key="frame" x="52" y="15" width="321" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Task Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mgg-sE-4K0">
+                                                    <rect key="frame" x="49.333333333333343" y="16" width="84" height="19"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="circle.inset.filled" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="KLh-vZ-3tL">
-                                                    <rect key="frame" x="20" y="17.666666666666686" width="18" height="19.333333333333371"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="18" id="RQd-32-Vrx"/>
-                                                        <constraint firstAttribute="height" constant="20.329999999999998" id="cgT-H3-L9b"/>
-                                                    </constraints>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle.inset.filled" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="KLh-vZ-3tL">
+                                                    <rect key="frame" x="20" y="17.666666666666664" width="19.333333333333329" height="16"/>
                                                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="font" weight="light">
                                                         <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                     </preferredSymbolConfiguration>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="mgg-sE-4K0" firstAttribute="leading" secondItem="KLh-vZ-3tL" secondAttribute="trailing" constant="14" id="BtR-2a-iSZ"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="KLh-vZ-3tL" secondAttribute="bottom" constant="6" id="3SR-7l-9Cz"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="mgg-sE-4K0" secondAttribute="bottom" constant="5" id="4DQ-QM-gSZ"/>
+                                                <constraint firstItem="mgg-sE-4K0" firstAttribute="leading" secondItem="KLh-vZ-3tL" secondAttribute="trailing" constant="10" id="6Ei-zJ-wKC"/>
+                                                <constraint firstItem="mgg-sE-4K0" firstAttribute="top" secondItem="FHy-D0-c6j" secondAttribute="topMargin" constant="5" id="6Hc-Lj-CsC"/>
+                                                <constraint firstItem="KLh-vZ-3tL" firstAttribute="top" secondItem="FHy-D0-c6j" secondAttribute="topMargin" constant="6" id="Ns2-3E-lmO"/>
+                                                <constraint firstItem="KLh-vZ-3tL" firstAttribute="leading" secondItem="FHy-D0-c6j" secondAttribute="leadingMargin" id="e3g-5k-99b"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="completed" destination="KLh-vZ-3tL" id="7NM-PC-GLq"/>
                                             <outlet property="task" destination="mgg-sE-4K0" id="Qwv-Uf-MLJ"/>
-                                            <outlet property="titleLabel" destination="mgg-sE-4K0" id="4hk-Wh-ZZ9"/>
+                                            <segue destination="7Xr-Sf-KzH" kind="show" id="gnq-h1-JA6"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -66,7 +66,7 @@
                             <constraint firstItem="cYX-oN-NqD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="yEP-JR-fWc"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="H8X-93-5Eg"/>
+                    <navigationItem key="navigationItem" title="Scavenger Hunt Check List" id="H8X-93-5Eg"/>
                     <connections>
                         <outlet property="taskList" destination="cYX-oN-NqD" id="pA8-WG-rxe"/>
                     </connections>
@@ -74,6 +74,22 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1052.6717557251909" y="3.5211267605633805"/>
+        </scene>
+        <!--TaskDetail-->
+        <scene sceneID="1xi-ot-rFu">
+            <objects>
+                <viewController title="TaskDetail" id="7Xr-Sf-KzH" customClass="TaskDetailViewController" customModule="ScavengerHunt" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="5A7-8o-rqg">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="lBk-4t-9he"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="NPT-6l-aEC"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0f3-71-Zl5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1883" y="16"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="mLR-3g-fbp">
@@ -83,6 +99,12 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="CW9-CP-tbN">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
