--- a/ScavengerHunt/ScavengerHunt/Base.lproj/Main.storyboard
+++ b/ScavengerHunt/ScavengerHunt/Base.lproj/Main.storyboard
@@ -82,14 +82,66 @@
                     <view key="view" contentMode="scaleToFill" id="5A7-8o-rqg">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m9i-x4-XRk">
+                                <rect key="frame" x="50" y="133" width="330" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="330" id="TFJ-Ly-dUe"/>
+                                    <constraint firstAttribute="height" constant="25" id="oUg-zE-g4q"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle.inset.filled" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="SfL-gH-ix2">
+                                <rect key="frame" x="15.999999999999998" y="136.66666666666666" width="19.333333333333329" height="19.333333333333343"/>
+                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="font" weight="light">
+                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                </preferredSymbolConfiguration>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zip-nP-NFb">
+                                <rect key="frame" x="0.0" y="409" width="393" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="K1r-aF-e05"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Upload"/>
+                                <connections>
+                                    <action selector="upload:" destination="7Xr-Sf-KzH" eventType="touchUpInside" id="R0P-Eq-ILs"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3xc-jx-i4F">
+                                <rect key="frame" x="50" y="184" width="343" height="20.333333333333343"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="lBk-4t-9he"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Zip-nP-NFb" firstAttribute="trailing" secondItem="lBk-4t-9he" secondAttribute="trailing" id="8DP-ag-iiL"/>
+                            <constraint firstItem="SfL-gH-ix2" firstAttribute="top" secondItem="lBk-4t-9he" secondAttribute="top" constant="33" id="CaF-BB-Sem"/>
+                            <constraint firstItem="m9i-x4-XRk" firstAttribute="leading" secondItem="lBk-4t-9he" secondAttribute="leading" constant="50" id="Gaw-Mp-WtQ"/>
+                            <constraint firstItem="Zip-nP-NFb" firstAttribute="leading" secondItem="5A7-8o-rqg" secondAttribute="leading" id="Ige-0S-ZEe"/>
+                            <constraint firstItem="Zip-nP-NFb" firstAttribute="top" secondItem="m9i-x4-XRk" secondAttribute="bottom" constant="251" id="Jd3-sX-kmb"/>
+                            <constraint firstItem="m9i-x4-XRk" firstAttribute="top" secondItem="lBk-4t-9he" secondAttribute="top" constant="30" id="WPb-pA-d7b"/>
+                            <constraint firstItem="lBk-4t-9he" firstAttribute="trailing" secondItem="3xc-jx-i4F" secondAttribute="trailing" id="XzL-Vw-09E"/>
+                            <constraint firstItem="m9i-x4-XRk" firstAttribute="leading" secondItem="SfL-gH-ix2" secondAttribute="trailing" constant="14.67" id="eGc-Cx-AiR"/>
+                            <constraint firstItem="3xc-jx-i4F" firstAttribute="top" secondItem="m9i-x4-XRk" secondAttribute="bottom" constant="26" id="wyv-d9-wzd"/>
+                            <constraint firstItem="3xc-jx-i4F" firstAttribute="leading" secondItem="lBk-4t-9he" secondAttribute="leading" constant="50" id="xEV-8s-hYA"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="NPT-6l-aEC"/>
+                    <connections>
+                        <outlet property="completedSignal" destination="SfL-gH-ix2" id="an0-1N-eqd"/>
+                        <outlet property="taskDescription" destination="3xc-jx-i4F" id="QP8-KL-Qcz"/>
+                        <outlet property="taskName" destination="m9i-x4-XRk" id="gXT-Ea-4iv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0f3-71-Zl5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1883" y="16"/>
+            <point key="canvasLocation" x="1881.679389312977" y="3.5211267605633805"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="mLR-3g-fbp">
